fix: log日志报错 & jvm 参数优化