@@ -26,6 +26,6 @@ COPY target/RENFEI.NET.jar /app/
 
 HEALTHCHECK --interval=10s --timeout=3s CMD curl -f http://localhost:8099/HealthCheck || exit 1
 
-ENTRYPOINT ["java","-Xms128M","-Xmx512M","-XX:+UseCompressedOops","-XX:+UseConcMarkSweepGC","-XX:SoftRefLRUPolicyMSPerMB=50","-Dfile.encoding=UTF-8","-Xverify:none","-Ddruid.mysql.usePingMethod=false","-jar","/app/RENFEI.NET.jar"]
+ENTRYPOINT ["java","-XX:+PrintGCDetails","-Xms128M","-Xmx256M","-XX:+UseCompressedOops","-XX:+UseConcMarkSweepGC","-XX:SoftRefLRUPolicyMSPerMB=50","-Dfile.encoding=UTF-8","-Xverify:none","-Ddruid.mysql.usePingMethod=false","-jar","/app/RENFEI.NET.jar"]
 
 EXPOSE 8099
